target/generated-sources/antlr4/MemertonsParser.cpp

	#include "wci/intermediate/TypeSpec.h"
	using namespace wci::intermediate;


// Generated from Memertons.g4 by ANTLR 4.7.2


#include "MemertonsVisitor.h"

#include "MemertonsParser.h"


using namespace antlrcpp;
using namespace antlr4;

MemertonsParser::MemertonsParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

MemertonsParser::~MemertonsParser() {
  delete _interpreter;
}

std::string MemertonsParser::getGrammarFileName() const {
  return "Memertons.g4";
}

const std::vector<std::string>& MemertonsParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& MemertonsParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ProgramContext ------------------------------------------------------------------

MemertonsParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

MemertonsParser::HeaderContext* MemertonsParser::ProgramContext::header() {
  return getRuleContext<MemertonsParser::HeaderContext>(0);
}

MemertonsParser::MainBlockContext* MemertonsParser::ProgramContext::mainBlock() {
  return getRuleContext<MemertonsParser::MainBlockContext>(0);
}


size_t MemertonsParser::ProgramContext::getRuleIndex() const {
  return MemertonsParser::RuleProgram;
}


antlrcpp::Any MemertonsParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MemertonsVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

MemertonsParser::ProgramContext* MemertonsParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, MemertonsParser::RuleProgram);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(56);
    header();
    setState(57);
    mainBlock();
    setState(58);
    match(MemertonsParser::T__0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- HeaderContext ------------------------------------------------------------------

MemertonsParser::HeaderContext::HeaderContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MemertonsParser::HeaderContext::MAIN() {
  return getToken(MemertonsParser::MAIN, 0);
}

tree::TerminalNode* MemertonsParser::HeaderContext::IDENTIFIER() {
  return getToken(MemertonsParser::IDENTIFIER, 0);
}


size_t MemertonsParser::HeaderContext::getRuleIndex() const {
  return MemertonsParser::RuleHeader;
}


antlrcpp::Any MemertonsParser::HeaderContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MemertonsVisitor*>(visitor))
    return parserVisitor->visitHeader(this);
  else
    return visitor->visitChildren(this);
}

MemertonsParser::HeaderContext* MemertonsParser::header() {
  HeaderContext *_localctx = _tracker.createInstance<HeaderContext>(_ctx, getState());
  enterRule(_localctx, 2, MemertonsParser::RuleHeader);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(60);
    match(MemertonsParser::MAIN);
    setState(61);
    match(MemertonsParser::IDENTIFIER);
    setState(62);
    match(MemertonsParser::T__1);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- MainBlockContext ------------------------------------------------------------------

MemertonsParser::MainBlockContext::MainBlockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

MemertonsParser::BlockContext* MemertonsParser::MainBlockContext::block() {
  return getRuleContext<MemertonsParser::BlockContext>(0);
}


size_t MemertonsParser::MainBlockContext::getRuleIndex() const {
  return MemertonsParser::RuleMainBlock;
}


antlrcpp::Any MemertonsParser::MainBlockContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MemertonsVisitor*>(visitor))
    return parserVisitor->visitMainBlock(this);
  else
    return visitor->visitChildren(this);
}

MemertonsParser::MainBlockContext* MemertonsParser::mainBlock() {
  MainBlockContext *_localctx = _tracker.createInstance<MainBlockContext>(_ctx, getState());
  enterRule(_localctx, 4, MemertonsParser::RuleMainBlock);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(64);
    block();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BlockContext ------------------------------------------------------------------

MemertonsParser::BlockContext::BlockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

MemertonsParser::DeclarationsContext* MemertonsParser::BlockContext::declarations() {
  return getRuleContext<MemertonsParser::DeclarationsContext>(0);
}

MemertonsParser::CompoundStmtContext* MemertonsParser::BlockContext::compoundStmt() {
  return getRuleContext<MemertonsParser::CompoundStmtContext>(0);
}


size_t MemertonsParser::BlockContext::getRuleIndex() const {
  return MemertonsParser::RuleBlock;
}


antlrcpp::Any MemertonsParser::BlockContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MemertonsVisitor*>(visitor))
    return parserVisitor->visitBlock(this);
  else
    return visitor->visitChildren(this);
}

MemertonsParser::BlockContext* MemertonsParser::block() {
  BlockContext *_localctx = _tracker.createInstance<BlockContext>(_ctx, getState());
  enterRule(_localctx, 6, MemertonsParser::RuleBlock);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(66);
    declarations();
    setState(67);
    compoundStmt();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeclarationsContext ------------------------------------------------------------------

MemertonsParser::DeclarationsContext::DeclarationsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

MemertonsParser::DeclListContext* MemertonsParser::DeclarationsContext::declList() {
  return getRuleContext<MemertonsParser::DeclListContext>(0);
}


size_t MemertonsParser::DeclarationsContext::getRuleIndex() const {
  return MemertonsParser::RuleDeclarations;
}


antlrcpp::Any MemertonsParser::DeclarationsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MemertonsVisitor*>(visitor))
    return parserVisitor->visitDeclarations(this);
  else
    return visitor->visitChildren(this);
}

MemertonsParser::DeclarationsContext* MemertonsParser::declarations() {
  DeclarationsContext *_localctx = _tracker.createInstance<DeclarationsContext>(_ctx, getState());
  enterRule(_localctx, 8, MemertonsParser::RuleDeclarations);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(69);
    declList();
    setState(70);
    match(MemertonsParser::T__1);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeclListContext ------------------------------------------------------------------

MemertonsParser::DeclListContext::DeclListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<MemertonsParser::DeclContext *> MemertonsParser::DeclListContext::decl() {
  return getRuleContexts<MemertonsParser::DeclContext>();
}

MemertonsParser::DeclContext* MemertonsParser::DeclListContext::decl(size_t i) {
  return getRuleContext<MemertonsParser::DeclContext>(i);
}


size_t MemertonsParser::DeclListContext::getRuleIndex() const {
  return MemertonsParser::RuleDeclList;
}


antlrcpp::Any MemertonsParser::DeclListContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MemertonsVisitor*>(visitor))
    return parserVisitor->visitDeclList(this);
  else
    return visitor->visitChildren(this);
}

MemertonsParser::DeclListContext* MemertonsParser::declList() {
  DeclListContext *_localctx = _tracker.createInstance<DeclListContext>(_ctx, getState());
  enterRule(_localctx, 10, MemertonsParser::RuleDeclList);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(72);
    decl();
    setState(77);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(73);
        match(MemertonsParser::T__1);
        setState(74);
        decl(); 
      }
      setState(79);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeclContext ------------------------------------------------------------------

MemertonsParser::DeclContext::DeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

MemertonsParser::VarListContext* MemertonsParser::DeclContext::varList() {
  return getRuleContext<MemertonsParser::VarListContext>(0);
}

MemertonsParser::TypeIdContext* MemertonsParser::DeclContext::typeId() {
  return getRuleContext<MemertonsParser::TypeIdContext>(0);
}


size_t MemertonsParser::DeclContext::getRuleIndex() const {
  return MemertonsParser::RuleDecl;
}


antlrcpp::Any MemertonsParser::DeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MemertonsVisitor*>(visitor))
    return parserVisitor->visitDecl(this);
  else
    return visitor->visitChildren(this);
}

MemertonsParser::DeclContext* MemertonsParser::decl() {
  DeclContext *_localctx = _tracker.createInstance<DeclContext>(_ctx, getState());
  enterRule(_localctx, 12, MemertonsParser::RuleDecl);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(80);
    varList();
    setState(81);
    match(MemertonsParser::T__2);
    setState(82);
    typeId();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VarListContext ------------------------------------------------------------------

MemertonsParser::VarListContext::VarListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<MemertonsParser::VarIdContext *> MemertonsParser::VarListContext::varId() {
  return getRuleContexts<MemertonsParser::VarIdContext>();
}

MemertonsParser::VarIdContext* MemertonsParser::VarListContext::varId(size_t i) {
  return getRuleContext<MemertonsParser::VarIdContext>(i);
}


size_t MemertonsParser::VarListContext::getRuleIndex() const {
  return MemertonsParser::RuleVarList;
}


antlrcpp::Any MemertonsParser::VarListContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MemertonsVisitor*>(visitor))
    return parserVisitor->visitVarList(this);
  else
    return visitor->visitChildren(this);
}

MemertonsParser::VarListContext* MemertonsParser::varList() {
  VarListContext *_localctx = _tracker.createInstance<VarListContext>(_ctx, getState());
  enterRule(_localctx, 14, MemertonsParser::RuleVarList);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(84);
    varId();
    setState(89);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == MemertonsParser::T__3) {
      setState(85);
      match(MemertonsParser::T__3);
      setState(86);
      varId();
      setState(91);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VarIdContext ------------------------------------------------------------------

MemertonsParser::VarIdContext::VarIdContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MemertonsParser::VarIdContext::IDENTIFIER() {
  return getToken(MemertonsParser::IDENTIFIER, 0);
}


size_t MemertonsParser::VarIdContext::getRuleIndex() const {
  return MemertonsParser::RuleVarId;
}


antlrcpp::Any MemertonsParser::VarIdContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MemertonsVisitor*>(visitor))
    return parserVisitor->visitVarId(this);
  else
    return visitor->visitChildren(this);
}

MemertonsParser::VarIdContext* MemertonsParser::varId() {
  VarIdContext *_localctx = _tracker.createInstance<VarIdContext>(_ctx, getState());
  enterRule(_localctx, 16, MemertonsParser::RuleVarId);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(92);
    match(MemertonsParser::IDENTIFIER);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TypeIdContext ------------------------------------------------------------------

MemertonsParser::TypeIdContext::TypeIdContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MemertonsParser::TypeIdContext::IDENTIFIER() {
  return getToken(MemertonsParser::IDENTIFIER, 0);
}


size_t MemertonsParser::TypeIdContext::getRuleIndex() const {
  return MemertonsParser::RuleTypeId;
}


antlrcpp::Any MemertonsParser::TypeIdContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MemertonsVisitor*>(visitor))
    return parserVisitor->visitTypeId(this);
  else
    return visitor->visitChildren(this);
}

MemertonsParser::TypeIdContext* MemertonsParser::typeId() {
  TypeIdContext *_localctx = _tracker.createInstance<TypeIdContext>(_ctx, getState());
  enterRule(_localctx, 18, MemertonsParser::RuleTypeId);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(94);
    match(MemertonsParser::IDENTIFIER);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CompoundStmtContext ------------------------------------------------------------------

MemertonsParser::CompoundStmtContext::CompoundStmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MemertonsParser::CompoundStmtContext::BO() {
  return getToken(MemertonsParser::BO, 0);
}

MemertonsParser::StmtListContext* MemertonsParser::CompoundStmtContext::stmtList() {
  return getRuleContext<MemertonsParser::StmtListContext>(0);
}

tree::TerminalNode* MemertonsParser::CompoundStmtContext::DY() {
  return getToken(MemertonsParser::DY, 0);
}


size_t MemertonsParser::CompoundStmtContext::getRuleIndex() const {
  return MemertonsParser::RuleCompoundStmt;
}


antlrcpp::Any MemertonsParser::CompoundStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MemertonsVisitor*>(visitor))
    return parserVisitor->visitCompoundStmt(this);
  else
    return visitor->visitChildren(this);
}

MemertonsParser::CompoundStmtContext* MemertonsParser::compoundStmt() {
  CompoundStmtContext *_localctx = _tracker.createInstance<CompoundStmtContext>(_ctx, getState());
  enterRule(_localctx, 20, MemertonsParser::RuleCompoundStmt);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(96);
    match(MemertonsParser::BO);
    setState(97);
    stmtList();
    setState(98);
    match(MemertonsParser::DY);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StmtContext ------------------------------------------------------------------

MemertonsParser::StmtContext::StmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

MemertonsParser::CompoundStmtContext* MemertonsParser::StmtContext::compoundStmt() {
  return getRuleContext<MemertonsParser::CompoundStmtContext>(0);
}

MemertonsParser::AssignmentStmtContext* MemertonsParser::StmtContext::assignmentStmt() {
  return getRuleContext<MemertonsParser::AssignmentStmtContext>(0);
}

MemertonsParser::Loop_while_stmtContext* MemertonsParser::StmtContext::loop_while_stmt() {
  return getRuleContext<MemertonsParser::Loop_while_stmtContext>(0);
}

MemertonsParser::If_stmtContext* MemertonsParser::StmtContext::if_stmt() {
  return getRuleContext<MemertonsParser::If_stmtContext>(0);
}

MemertonsParser::PrintStmtContext* MemertonsParser::StmtContext::printStmt() {
  return getRuleContext<MemertonsParser::PrintStmtContext>(0);
}


size_t MemertonsParser::StmtContext::getRuleIndex() const {
  return MemertonsParser::RuleStmt;
}


antlrcpp::Any MemertonsParser::StmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MemertonsVisitor*>(visitor))
    return parserVisitor->visitStmt(this);
  else
    return visitor->visitChildren(this);
}

MemertonsParser::StmtContext* MemertonsParser::stmt() {
  StmtContext *_localctx = _tracker.createInstance<StmtContext>(_ctx, getState());
  enterRule(_localctx, 22, MemertonsParser::RuleStmt);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(106);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case MemertonsParser::BO: {
        enterOuterAlt(_localctx, 1);
        setState(100);
        compoundStmt();
        break;
      }

      case MemertonsParser::IDENTIFIER: {
        enterOuterAlt(_localctx, 2);
        setState(101);
        assignmentStmt();
        break;
      }

      case MemertonsParser::LOOP: {
        enterOuterAlt(_localctx, 3);
        setState(102);
        loop_while_stmt();
        break;
      }

      case MemertonsParser::IF: {
        enterOuterAlt(_localctx, 4);
        setState(103);
        if_stmt();
        break;
      }

      case MemertonsParser::PRINT: {
        enterOuterAlt(_localctx, 5);
        setState(104);
        printStmt();
        break;
      }

      case MemertonsParser::T__1:
      case MemertonsParser::T__6:
      case MemertonsParser::DY: {
        enterOuterAlt(_localctx, 6);

        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StmtListContext ------------------------------------------------------------------

MemertonsParser::StmtListContext::StmtListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<MemertonsParser::StmtContext *> MemertonsParser::StmtListContext::stmt() {
  return getRuleContexts<MemertonsParser::StmtContext>();
}

MemertonsParser::StmtContext* MemertonsParser::StmtListContext::stmt(size_t i) {
  return getRuleContext<MemertonsParser::StmtContext>(i);
}


size_t MemertonsParser::StmtListContext::getRuleIndex() const {
  return MemertonsParser::RuleStmtList;
}


antlrcpp::Any MemertonsParser::StmtListContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MemertonsVisitor*>(visitor))
    return parserVisitor->visitStmtList(this);
  else
    return visitor->visitChildren(this);
}

MemertonsParser::StmtListContext* MemertonsParser::stmtList() {
  StmtListContext *_localctx = _tracker.createInstance<StmtListContext>(_ctx, getState());
  enterRule(_localctx, 24, MemertonsParser::RuleStmtList);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(108);
    stmt();
    setState(113);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == MemertonsParser::T__1) {
      setState(109);
      match(MemertonsParser::T__1);
      setState(110);
      stmt();
      setState(115);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AssignmentStmtContext ------------------------------------------------------------------

MemertonsParser::AssignmentStmtContext::AssignmentStmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

MemertonsParser::VariableContext* MemertonsParser::AssignmentStmtContext::variable() {
  return getRuleContext<MemertonsParser::VariableContext>(0);
}

MemertonsParser::ExprContext* MemertonsParser::AssignmentStmtContext::expr() {
  return getRuleContext<MemertonsParser::ExprContext>(0);
}


size_t MemertonsParser::AssignmentStmtContext::getRuleIndex() const {
  return MemertonsParser::RuleAssignmentStmt;
}


antlrcpp::Any MemertonsParser::AssignmentStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MemertonsVisitor*>(visitor))
    return parserVisitor->visitAssignmentStmt(this);
  else
    return visitor->visitChildren(this);
}

MemertonsParser::AssignmentStmtContext* MemertonsParser::assignmentStmt() {
  AssignmentStmtContext *_localctx = _tracker.createInstance<AssignmentStmtContext>(_ctx, getState());
  enterRule(_localctx, 26, MemertonsParser::RuleAssignmentStmt);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(116);
    variable();
    setState(117);
    match(MemertonsParser::T__4);
    setState(118);
    expr(0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Loop_while_stmtContext ------------------------------------------------------------------

MemertonsParser::Loop_while_stmtContext::Loop_while_stmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MemertonsParser::Loop_while_stmtContext::LOOP() {
  return getToken(MemertonsParser::LOOP, 0);
}

MemertonsParser::StmtListContext* MemertonsParser::Loop_while_stmtContext::stmtList() {
  return getRuleContext<MemertonsParser::StmtListContext>(0);
}

tree::TerminalNode* MemertonsParser::Loop_while_stmtContext::WHILE() {
  return getToken(MemertonsParser::WHILE, 0);
}

MemertonsParser::ExprContext* MemertonsParser::Loop_while_stmtContext::expr() {
  return getRuleContext<MemertonsParser::ExprContext>(0);
}


size_t MemertonsParser::Loop_while_stmtContext::getRuleIndex() const {
  return MemertonsParser::RuleLoop_while_stmt;
}


antlrcpp::Any MemertonsParser::Loop_while_stmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MemertonsVisitor*>(visitor))
    return parserVisitor->visitLoop_while_stmt(this);
  else
    return visitor->visitChildren(this);
}

MemertonsParser::Loop_while_stmtContext* MemertonsParser::loop_while_stmt() {
  Loop_while_stmtContext *_localctx = _tracker.createInstance<Loop_while_stmtContext>(_ctx, getState());
  enterRule(_localctx, 28, MemertonsParser::RuleLoop_while_stmt);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(120);
    match(MemertonsParser::LOOP);
    setState(121);
    match(MemertonsParser::T__5);
    setState(122);
    stmtList();
    setState(123);
    match(MemertonsParser::T__6);
    setState(124);
    match(MemertonsParser::WHILE);
    setState(125);
    match(MemertonsParser::T__7);
    setState(126);
    expr(0);
    setState(127);
    match(MemertonsParser::T__8);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- If_stmtContext ------------------------------------------------------------------

MemertonsParser::If_stmtContext::If_stmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MemertonsParser::If_stmtContext::IF() {
  return getToken(MemertonsParser::IF, 0);
}

MemertonsParser::ExprContext* MemertonsParser::If_stmtContext::expr() {
  return getRuleContext<MemertonsParser::ExprContext>(0);
}

std::vector<MemertonsParser::StmtListContext *> MemertonsParser::If_stmtContext::stmtList() {
  return getRuleContexts<MemertonsParser::StmtListContext>();
}

MemertonsParser::StmtListContext* MemertonsParser::If_stmtContext::stmtList(size_t i) {
  return getRuleContext<MemertonsParser::StmtListContext>(i);
}

tree::TerminalNode* MemertonsParser::If_stmtContext::ELSE() {
  return getToken(MemertonsParser::ELSE, 0);
}


size_t MemertonsParser::If_stmtContext::getRuleIndex() const {
  return MemertonsParser::RuleIf_stmt;
}


antlrcpp::Any MemertonsParser::If_stmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MemertonsVisitor*>(visitor))
    return parserVisitor->visitIf_stmt(this);
  else
    return visitor->visitChildren(this);
}

MemertonsParser::If_stmtContext* MemertonsParser::if_stmt() {
  If_stmtContext *_localctx = _tracker.createInstance<If_stmtContext>(_ctx, getState());
  enterRule(_localctx, 30, MemertonsParser::RuleIf_stmt);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(129);
    match(MemertonsParser::IF);
    setState(130);
    match(MemertonsParser::T__7);
    setState(131);
    expr(0);
    setState(132);
    match(MemertonsParser::T__8);
    setState(133);
    match(MemertonsParser::T__5);

    setState(134);
    stmtList();
    setState(135);
    match(MemertonsParser::T__6);
    setState(141);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == MemertonsParser::ELSE) {
      setState(136);
      match(MemertonsParser::ELSE);
      setState(137);
      match(MemertonsParser::T__5);
      setState(138);
      stmtList();
      setState(139);
      match(MemertonsParser::T__6);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PrintStmtContext ------------------------------------------------------------------

MemertonsParser::PrintStmtContext::PrintStmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MemertonsParser::PrintStmtContext::PRINT() {
  return getToken(MemertonsParser::PRINT, 0);
}

MemertonsParser::FormatStringContext* MemertonsParser::PrintStmtContext::formatString() {
  return getRuleContext<MemertonsParser::FormatStringContext>(0);
}

std::vector<MemertonsParser::PrintArgContext *> MemertonsParser::PrintStmtContext::printArg() {
  return getRuleContexts<MemertonsParser::PrintArgContext>();
}

MemertonsParser::PrintArgContext* MemertonsParser::PrintStmtContext::printArg(size_t i) {
  return getRuleContext<MemertonsParser::PrintArgContext>(i);
}

